--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 :root {
   font: 16px / 1 sans-serif;
+  color1: rgba(43, 45, 66, 1);
+  color2: rgba(227, 178, 60, 1);
+  color3: rgba(141, 153, 174, 1);
+  color4: rgba(237, 242, 244, 1);
+  color5: rgba(216, 0, 50, 1);
 }
 
 html {
@@ -9,4 +14,43 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-color: rgba(43, 45, 66, 1);
+}
+
+header {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(237, 242, 244, 1);
+  border: solid rgba(216, 0, 50, 1) 0.5rem;
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  border: solid rgba(227, 178, 60, 1) 0.5rem;
+}
+
+ul {
+  background-color: rgba(141, 153, 174, 1);
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: rgba(227, 178, 60, 1);
+}
+
+a {
+  background-color: rgba(141, 153, 174, 1);
+  border: solid rgba(227, 178, 60, 1) 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.back-home {
+  margin: 1rem 1rem 1rem 2rem;
 }
